fix: workspace button not overlapping thread anymore

--- a/src/app/components/thread/thread.component.scss
+++ b/src/app/components/thread/thread.component.scss
@@ -102,6 +102,7 @@
     .thread-container {
         right: 20px; 
         position: absolute;
+        z-index: 1;
         height: calc(100% - 25px);
         box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2)
     }
